# rust-learn

./: .env  .gitignore  .pre-commit-config.yaml  0-hello.ipynb  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  build.rs  build_image.sh  cargo_command.sh  docker-compose.yml  foo.txt  recipes.json  test_cmd.sh  watch_build.sh  watch_run.sh
.github/workflows/: ci.yaml
add/: Cargo.toml  workspace.sh
add/add-one/: Cargo.toml
add/add-one/src/: lib.rs
add/add-two/: Cargo.toml
add/add-two/src/: lib.rs
add/adder/: Cargo.toml
add/adder/src/: main.rs
addons/: start_postgres.sh
algorithms/: Cargo.toml
algorithms/src/sorting/: bubble_sort.rs  insertion_sort.rs  merge_sort.rs  mod.rs  quick_sort.rs  selection_sort.rs
art/: Cargo.toml
art/src/: lib.rs
blog/src/: blog.rs
chapter-1/: Cargo.toml  README.md
chapter-1/src/: main.rs
chapter-2/: Cargo.toml
client/react-url-mapper/: .env  package-lock.json  package.json
client/react-url-mapper/public/: index.html
client/react-url-mapper/src/: App.tsx  Settings.tsx  index.css
client/tera/: index.html  index.js  style.css
collection/: Cargo.toml
collection/src/: lib.rs
collection/src/list/: list.rs  (+7 more)
communicator/: Cargo.toml
communicator/src/: client.rs  lib.rs
concurrency/src/: lib.rs  my_arc.rs
configs/: default.json
dao/: Cargo.toml
dao/src/: lib.rs  pet.rs  user.rs
dbschema/: schema.sql
examples/: 01_static_const.rs  02_static_var.rs  03_atomic_var.rs  04_lazy_static.rs  05_lazy_static2.rs  06_box_leak.rs  07_box_leak2.rs  08_once_cell.rs  09_once_lock.rs  0_any.rs  0_async_demo.rs  0_create_schema.rs  0_default.rs  0_normal_type.rs  0_partial_eq.rs  0_result.rs  10_const_mutex.rs  10_other_slice.rs  10_reference_cycles.rs  10_shared_db.rs  11_holding_mutex_guard_across_await.rs  11_weak_reference.rs  12_restructure_not_to_hold_lock_across_await.rs  13_tokio_mutex.rs  14_create_channel.rs  15_manager_task_and_receive_resp.rs  16_backpressure_and_bounded_channels.rs  17_async_read.rs  18_async_read_to_end.rs  19_async_write.rs  1_all_places_for_patterns.rs  1_box.rs  1_closure.rs  1_define_and_init.rs  1_error_convert.rs  1_generic.rs  1_if_demo.rs  1_opt.rs  1_parital_ord.rs  1_phantom_type.rs  (+125 more)
examples/1_future/: README.md  main.rs
feature-demo/: Cargo.toml
feature-demo/src/: bmp.rs  ico.rs  lib.rs  png.rs  webp.rs
frontend/: package.json
graphql/: all_schema_field.graphql  next_args.graphql  publish.graphql  schema.graphql
hello-wasm/: .gitignore
hello-wasm/src/: lib.rs
k8s/: postgres.yml  run_service.sh  url-mapper-rs.yml
lib/: Cargo.toml
lib/src/: dynamic.rs  lib.rs  linked_list.rs  node.rs  with.rs
libs/: Cargo.toml
libs/src/: hello.rs  lib.rs  macro_1_raw.rs  macro_2_matcher.rs
migrations/01-add-person/: up.sql
migrations/2023-09-07-025652_create_person/: down.sql  up.sql
mini-redis/: start-cli.sh  start-server.sh
multi-crate/: Cargo.toml
multi-crate/src/: main.rs
multi-mod/: Cargo.toml
multi-mod/src/: main.rs
my-macro/: Cargo.toml
my-macro/src/: elapsed.rs  lib.rs
my-project/: Cargo.toml
my-rust-gui-lib/: Cargo.toml
my-rust-gui-lib/src/: gui.rs  lib.rs
my_crate/: Cargo.toml  doc.sh
my_crate/src/: lib.rs
my_mod/: Cargo.toml
my_mod/src/: lib.rs
organize-tests/: Cargo.toml  test.sh
organize-tests/src/: lib.rs
organize-tests/tests/: integration_test.rs
private_demo/: Cargo.toml
private_demo/src/: lib.rs
proto/: storage.proto
restaurant/src/: front_of_house.rs  lib.rs
run-tests/: Cargo.toml  test.sh
run-tests/src/: lib.rs
schema/: schema.toml
sql/: schema.sql
src/: api.rs  behaviour.rs  connection.rs  consts.rs  dir.rs  graphql.rs  handlers.rs  hlc.rs  id_generator.rs  lib.rs  logger.rs  main.rs  models.rs  storage.rs  syncer.rs  utils.rs
src/conf/: conf.rs  consts.rs  database.rs
src/configs/: conf.rs  consts.rs  database.rs  mod.rs
src/controller/: mod.rs
src/dao/: base_mapper.rs  mod.rs  person.rs  url_map_dao.rs
src/entity/: person.rs
src/macros/: mod.rs
src/models/: person.rs
src/server/: mod.rs  router.rs  serve.rs  state.rs
src/service/: mod.rs
src/storage/: migration.rs  mod.rs  person.rs
src/swarm/: gossip_event.rs  handler.rs  mdns_event.rs  mod.rs  swarm_event.rs
src/sync/: mod.rs  models.rs  oplog.rs  progress.rs  progress_manager.rs
tonic-demo/: Cargo.toml  README.md  build.rs
tonic-demo/proto/: goodbye.proto  hello.proto
tonic-demo/proto/basic/: basic.proto
tonic-demo/src/: lib.rs
too-many-lists/: Cargo.toml
too-many-lists/src/: fifth.rs  first.rs  fourth.rs  lib.rs  second.rs  sixth.rs  third.rs
use_demo/: Cargo.toml
use_demo/src/: lib.rs
write-tests/: Cargo.toml
write-tests/src/: lib.rs
www/: index.js
(+27 files in other folders)
