[package]
name = "rust-learn"
version = "0.1.0"
edition = "2018"
license-file = "LICENSE"
description = "learning rust"
homepage = "https://jasonkayzk.github.io/"
readme = "README.md"
repository = "https://github.com/JasonkayZK/rust-learn/"
authors = ["Jasonkay jasonkayzk@gmail.com"]

[dependencies]
aquadoggo = "0.5.0"
p2panda-rs = "0.7.1"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0.107"
hex = "0.4.3"
toml = "0.4.2"
serde = { version = "1.0.190", features = ["derive"] }
graphql_client = "0.13.0"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
anyhow = "1.0.75"

[dev-dependencies]
zenode = "0.3.4"
