[package]
name = "rust-learn"
version = "0.1.0"
edition = "2018"
rust-version = "1.71.0"
license-file = "LICENSE"
description = "learning rust"
homepage = "https://jasonkayzk.github.io/"
readme = "README.md"
repository = "https://github.com/JasonkayZK/rust-learn/"
authors = ["Jasonkay jasonkayzk@gmail.com"]

[dependencies]
libp2p = { version = "0.52", features = ["tokio", "floodsub", "noise", "tcp", "yamux", "mdns", "macros", "identify"] }
tokio = { version = "1", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread", "fs", "time", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1.5"
log = "0.4"
pretty_env_logger = "0.4"
anyhow = "1.0.77"
