[package]
name = "rust-learn"
version = "0.1.0"
edition = "2018"
rust-version = "1.71.0"
license-file = "LICENSE"
description = "learning rust"
homepage = "https://jasonkayzk.github.io/"
readme = "README.md"
repository = "https://github.com/JasonkayZK/rust-learn/"
authors = ["Jasonkay jasonkayzk@gmail.com"]

[dependencies]
libp2p = { version = "0.52", features = ["tokio", "gossipsub", "noise", "tcp", "yamux", "mdns", "macros", "identify"] }
tokio = { version = "1", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread", "fs", "time", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1.5"
log = "0.4"
anyhow = "1.0.77"
hypercore = { version = "0.12.1", features = ["sparse"] }
random-access-disk = { version = "3.0.0", features = ["libc", "sparse"] }
roaring = { version = "0.10.2", features = ["serde"] }
uhlc = "0.6.3"
redb = "1.4.0"
chrono = "0.4.31"
rs-snowflake = "0.6.0"
rand = "0.8.5"
