[package]
name = "feature-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[features]

default = []

full = [
    "bmp",
    "png",
    "ico",
    "webp"
]

bmp = []
png = []
ico = ["bmp", "png"]
webp = []
