[package]
name = "tonic-demo"
version = "0.1.0"
edition = "2021"
description = "A demo to learn tonic and grpc."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="server"
path="./bin/server.rs"

[[bin]]
name="client"
path="./bin/client.rs"

[dependencies]
prost = "0.11.3"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
tonic = "0.8.3"

[build-dependencies]
tonic-build = "0.8.4"
